# my_llm_wiki_test

./: DEPLOY.md  MIGRATION_GUIDE.md  PHASE6_COMPLETION_SUMMARY.md  PROGRESS.md  SECURITY_AUDIT.md  TODO_FIXES.md  docker-compose.yml  package-lock.json  package.json  start-tauri.ps1  vite.config.ts
.github/workflows/: build.yml  ci.yml
.trae/documents/: enterprise_refactoring_plan.md
.trae/specs/refactor-to-client-server-architecture/: checklist.md  spec.md  tasks.md
extension/: manifest.json  popup.html  popup.js
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  build_log.txt  docker-compose.prod.yml  docker-compose.yml
server/migrations/: 20240101000001_init.sql  20240101000002_seed_data.sql  20240101000003_project_settings_and_stats.sql  20240101000004_llm_and_ingest.sql  20240101000005_fix_refresh_tokens.sql  20240101000006_add_indexes.sql
server/src/: lib.rs  main.rs
server/src/api/: auth.rs  chat.rs  files.rs  graph.rs  ingest.rs  lint.rs  llm_configs.rs  mod.rs  projects.rs  research.rs  review.rs  search.rs  users.rs  vector.rs
server/src/config/: mod.rs
server/src/db/: connection.rs
server/src/middleware/: auth.rs  error.rs  mod.rs  permission.rs  rate_limit.rs
server/src/models/: file.rs  mod.rs  permission.rs  project.rs  role.rs  user.rs
server/src/services/: auth.rs  document_processor.rs  file.rs  graph.rs  llm.rs  mod.rs  search.rs  vector.rs
server/src/utils/: content_type.rs
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src/components/auth/: auth-router.tsx  login-page.tsx  protected-route.tsx  register-page.tsx
src/components/settings/: project-members.tsx
src/lib/: api-client.ts
src/lib/api/: adapter.ts  auth.ts  chat.ts  files.ts  graph.ts  index.ts  lint.ts  permissions.ts  projects.ts  research.ts  review.ts  vector.ts
src/stores/: auth-store.ts
src/test/: api.test.ts  auth.test.tsx  e2e.test.ts
src/types/: wiki.ts
tools/migrate/: README.md  export_lancedb.py  import_qdrant.py  migrate.py  migrate_config.py  migrate_files.py  verify_migration.py
