[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"
description = "LLM Wiki Server - Backend API service"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
mime_guess = "2"
walkdir = "2"
sha2 = "0.10"
futures = "0.3"
axum-macros = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
minio-rsc = "0.2"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
lopdf = "0.34"
calamine = "0.26"
tokio-stream = "0.1"
once_cell = "1.19"
petgraph = "0.6"
regex = "1"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
